fixed nav image clipping on mobile, added profile path, some content in about

--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,8 @@ html::-webkit-scrollbar {
 a {
   color: inherit;
 }
+
+p {
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
